--- a/LittleWorkshop/src/main/webapp/resources/css/index.css
+++ b/LittleWorkshop/src/main/webapp/resources/css/index.css
@@ -253,6 +253,12 @@ input::placeholder {
     width:454px;
     height:557px;
 }
+.product_box{
+	width: 1200px;
+	display: flex;
+	flex-wrap: wrap;
+}
+
 .product_box>div{
     display: flex;
     flex-direction: column;
@@ -277,8 +283,8 @@ button{
     margin-top: 20px;
 }
 .only-box>.product_img>a>img{
-    margin-left: 7px; 
-    margin-top: 10px;
+/*     margin-left: 7px;  */
+/*     margin-top: 10px; */
     width:230px;
     height:155px;
 }
@@ -287,9 +293,12 @@ button{
     margin-top: 15px;
 }
 .new-box>.product_img>a>img{
-    width: 280px;
-    margin-left: 4px;
-    margin-top: 2px;
+    width: 288.7px;
+    height:190px;
+    border: 1px solid #eeeeee;
+    box-sizing: border-box;
+/*     margin-left: 4px; */
+/*     margin-top: 2px; */
 }
 .discount-box>.product_img>a>img{
     width: 190px;
@@ -364,6 +373,7 @@ button{
 .box_area2 > div {
     display: flex;
     margin-bottom: 15px;
+    flex-grow: 1;
 
 }
 
@@ -371,9 +381,19 @@ button{
     margin-left: 15px;
 }
 
+.box_area2 > div > div:nth-child(1) {
+    margin-left: 0px;
+}
+.box_area2 > div > div:nth-child(5) {
+    margin-left: 0px;
+}
+.box_area2 > div > div:nth-child(n+5) {
+    margin-top: 15px;
+}
+
 .box_area2 > div > div {
     display: flex;
-    width: 290px;
+    width: 288.7px;
     height: 300px;
     box-shadow: 0 0 0 1px #eee inset;
 }
