--- a/LittleWorkshop/src/main/webapp/resources/css/sign_up.css
+++ b/LittleWorkshop/src/main/webapp/resources/css/sign_up.css
@@ -5,10 +5,19 @@
     list-style: none;
     font-family: 'Noto Sans KR', sans-serif;
 }
+a:link{
+    color: #222222;
+    text-decoration: none;
+}
+a:visited{
+    color: #222222;
+    text-decoration: none;
+}
 .logo{
     margin-top: 50px;
     margin: auto;
     width: 190px;
+    
 }
 .login_area{
     display: flex;
@@ -17,16 +26,17 @@
     font-size: 18px;
     width: 600px;
 }
-
-.login{
-    border-bottom: solid 2px #92b6f3;
-    
-    width: 300px;
-    
+.input{
+    margin: auto;
+    width: 400px;
 }
-.sign_up{
+.login{
     border-bottom: solid 1px #ddd;
     padding-bottom: 25px;
+    width: 300px;
+}
+.sign_up{
+    border-bottom: solid 2px #92b6f3;
     width: 300px;
 }
 .login>a{
@@ -46,8 +56,7 @@
 .textbox{
     display: flex;
     flex-direction: column;
-    padding-top: 55px;
-    margin: auto;
+    margin-top: 55px;
     width: 380px;
     height: 45px;
 }
@@ -121,7 +130,6 @@ input[type="checkbox"]{
     justify-content: center;
     text-decoration: none;
     margin-top: 35px;
-    cursor:pointer;
 }
 .login-btn>a{
     color: #fff;
@@ -160,7 +168,8 @@ hr{
 .btn-sns:nth-child(2){
     margin-left: 15px;
 }
-.ip{
+
+.textbox>input{
     display: flex;
     height: 45px;
     font-size: 14px;
@@ -193,12 +202,13 @@ hr{
     color:#fff;
 }
 .check_area{
-    margin-top: 100px;
+    padding-top: 100px;
+    width:400px;
+    margin: auto;
     
 }
 .check_option{
     display: flex;
-    margin-left: 780px;
 }
 .check_option>label{
     font-size: 12px;
@@ -215,8 +225,11 @@ hr{
     font-size: 11px;
     margin-left: 142px;
 }
+.signup{
+    margin: auto;
+    width: 392px;
+}
 .button_signup{
-    margin-left: 780px;
     width: 373px;
     height: 47px;
     margin-top: 25px;
