[전천익] index페이지 상품 좋아요 구현

--- a/LittleWorkshop/src/main/webapp/resources/css/index.css
+++ b/LittleWorkshop/src/main/webapp/resources/css/index.css
@@ -174,8 +174,13 @@ a:visited{
     margin-top: 5px;
     width: 24px;
     height: 24px;
-    font-size: 20px;  
+    font-size: 20px;
+    cursor: pointer;  
 }
 .bg{
     background-color: #fff;
+}
+
+.new_item>button>.push {
+	background-color: red;
 }
