[윤동현] list,login,sing_up,view css 수정

--- a/LittleWorkshop/src/main/webapp/resources/css/sign_up.css
+++ b/LittleWorkshop/src/main/webapp/resources/css/sign_up.css
@@ -34,16 +34,12 @@ a:visited{
     border-bottom: solid 1px #ddd;
     padding-bottom: 25px;
     width: 300px;
+    text-align:center;
 }
 .sign_up{
     border-bottom: solid 2px #92b6f3;
     width: 300px;
-}
-.login>a{
-    margin: 125px;
-}
-.sign_up>a{
-    margin-left: 125px;   
+    text-align:center;
 }
 .sign_up>a:link{
     color: black;
