--- a/LittleWorkshop/src/main/webapp/resources/css/list.css
+++ b/LittleWorkshop/src/main/webapp/resources/css/list.css
@@ -44,10 +44,10 @@ a:visited{
     color: #ff9eb3;
 }
 .maincontent{
-    margin-left: 360px;
+	margin:auto;
     width: 1200px;
 }
-.category{
+.categoryMenu{
     margin-top: 60px;
     display: flex;
     justify-content: space-around;
@@ -56,7 +56,7 @@ a:visited{
     padding: 20px 20px;
     font-size: 16px;
 }
-.category>div>a{
+.categoryMenu>div>a{
     color: #888888;
 }
 .item{
