--- a/LittleWorkshop/src/main/webapp/resources/css/login.css
+++ b/LittleWorkshop/src/main/webapp/resources/css/login.css
@@ -20,7 +20,7 @@
 
 .login{
     border-bottom: solid 2px #92b6f3;
-    
+    text-align:center;
     width: 300px;
     
 }
@@ -28,12 +28,7 @@
     border-bottom: solid 1px #ddd;
     padding-bottom: 25px;
     width: 300px;
-}
-.login>a{
-    margin: 125px;
-}
-.sign_up>a{
-    margin-left: 125px;   
+    text-align:center;
 }
 .sign_up>a:link{
     color: black;
