--- a/LittleWorkshop/src/main/webapp/resources/css/list.css
+++ b/LittleWorkshop/src/main/webapp/resources/css/list.css
@@ -23,11 +23,19 @@ a:visited{
     height: 200px;
     overflow: hidden;
     position: relative;
+    display: block;
+    z-index:-1;
+    margin: auto;
+}
+.mainbanner>img{
+   display: block;
+   width: auto;
+   margin: auto; 
 }
 .banner .txt{
     position: absolute;
     top: 20%;
-	left: 50%;
+	left: 46%;
     font-size: 36px;
     font-weight: bold;
     color: #ffffff;
@@ -35,7 +43,7 @@ a:visited{
 .banner .txt2{
     position: absolute;
     top: 50%;
-	left: 45%;
+	left: 42%;
     font-size: 20px;
     text-align: left;
     color: #ffffff;
