[송이] 인기작품 구현 / jsp 수정

--- a/LittleWorkshop/src/main/webapp/resources/css/index.css
+++ b/LittleWorkshop/src/main/webapp/resources/css/index.css
@@ -1,4 +1,4 @@
-* {
+ * {
     margin: 0;
     padding: 0;
     text-decoration: none;
@@ -180,6 +180,6 @@ a:visited{
     background-color: #fff;
 }
 
-.new_item>button>.push {
+button>.push {
 	background-color: red;
 }
