[윤동현] 검색페이지 css 오류 수정

--- a/LittleWorkshop/src/main/webapp/resources/css/searchList.css
+++ b/LittleWorkshop/src/main/webapp/resources/css/searchList.css
@@ -79,7 +79,7 @@ input:focus {
     margin-left: 30px;
     margin-right: 10px;
 }
-.search{
+.searchs{
     font-size: 14px;
     color: #fff;
     width: 100px;
