[윤동현] cdn 적용 안된거 적용 및 오류 수정

--- a/LittleWorkshop/src/main/webapp/resources/css/header.css
+++ b/LittleWorkshop/src/main/webapp/resources/css/header.css
@@ -97,12 +97,13 @@ input::placeholder {
     position: relative;
 }
 
-.search > i {
+.search > button > i {
     position: absolute;
     left: 485px;
     top: 25px;
     color: #888888;
     font-size: 18px;
+    cursor: pointer;
 }
 
 .searchbox {
