--- a/LittleWorkshop/src/main/webapp/resources/css/searchList.css
+++ b/LittleWorkshop/src/main/webapp/resources/css/searchList.css
@@ -121,13 +121,33 @@ input:focus {
     margin: auto;
     margin-top: 20px;
 }
+.item{
+    width: 288px;
+    height: 300px;
+    margin-top: 50px;
+    box-shadow: 0 0 0 1px #dddddd inset;
+    float:left;
+    margin-left: 10px;
+}
+.item>div{
+	margin-left : 15px;
+}
+.item>div:nth-child(1){
+	margin-left : 0px;
+}
+.item>div>a>img{
+	width: 286px;
+	height : 160px;
+	object-fit: cover;
+	margin-left : 1px;
+	margin-top : 1px;
+}
 .notfound{
 	text-align:center;
 }
 .pd-txt{
     margin-left: 12px;
     font-size: 14px;
-    
 }
 .pd-txt>div:nth-child(1){
     font-size: 12px;
@@ -144,6 +164,24 @@ input:focus {
 .pd-txt>div:nth-child(3){
     margin-top: 30px;
     font-weight: 700;
+}
+.pd-sellr>a{
+    font-size: 12px;
+    color: #888888;
+}
+.pd-name>a{
+    font-size: 14px;
+    font-weight: 600;
+}
+.pd-price>a{
+    font-size: 14px;
+    font-weight: 600;
+}
+.pd-price{
+    margin-top: 30px;
+}
+.click>a{
+	color: #92b6f3 !important;
 }
 .new_item{
     width: 290px;
