[송이] 장바구니 input 안보이는 문제 css 수정

--- a/LittleWorkshop/src/main/webapp/resources/css/basket.css
+++ b/LittleWorkshop/src/main/webapp/resources/css/basket.css
@@ -46,9 +46,9 @@ margin-bottom: 80px;
 border: 1px solid #dddddd;
 padding: 20px 30px;
 }
-input[type=checkbox] {
-    display:none;
-}
+/* input[type=checkbox] { */
+/*     display:none; */
+/* } */
 input[type=checkbox] + label {
     display: block;
     cursor: pointer; 
