[송이] 상품 페이지 판매자 프로필 및 상품태그 연결 / EXERD 수정 / 판매자 마이페이지 프로필 이미지 추가

--- a/LittleWorkshop/src/main/webapp/resources/css/header.css
+++ b/LittleWorkshop/src/main/webapp/resources/css/header.css
@@ -167,7 +167,7 @@ input::placeholder {
     flex-direction: row;
     text-align: end;
     margin-right: 0px;
-    margin-left: 114px;
+    margin-left: auto;
 }
 
 #shopmenu > ul:nth-child(1) a:visited {
